# python-project-boilerplate

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
docs/superpowers/plans/: 2026-07-14-fastapi-uv-boilerplate.md
docs/superpowers/specs/: 2026-07-14-python-fastapi-boilerplate-design.md
tests/: test_config.py  test_main.py
