[project]
name = "app"
version = "0.1.0"
description = "FastAPI + uv project boilerplate"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "httpx>=0.27",
    "pre-commit>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Upstream: starlette's TestClient deprecates httpx in favor of httpx2. Not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
